alb-asg-vpc/stack2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC with Public & Private Subnets, NAT Gateway, ALB, and ASG

####################
# PARAMETERS
####################
Parameters:
  Env:
    Type: String

  VpcCidr:
    Type: String

  VpcName:
    Type: String

  InternetGatewayName:
    Type: String

  PubSubName:
    Type: String

  PriSubName:
    Type: String

  PubRtName:
    Type: String

  PriRtName:
    Type: String

  EipName:
    Type: String

  NgwName:
    Type: String

  PublicSubnetCidrs:
    Type: List<String>

  PrivateSubnetCidrs:
    Type: List<String>

  AvailabilityZones:
    Type: List<AWS::EC2::AvailabilityZone::Name>

  AmiId:
    Type: AWS::EC2::Image::Id

  InstanceType:
    Type: String

  MinSize:
    Type: Number

  MaxSize:
    Type: Number

  DesiredCapacity:
    Type: Number

  LaunchTemplateName:
    Type: String

  AlbName:
    Type: String

  AlbTargetGroupName:
    Type: String

####################
# RESOURCES
####################
Resources:

  ### VPC ###
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref VpcName
        - Key: Env
          Value: !Ref Env

  ### IGW ###
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref InternetGatewayName
        - Key: Env
          Value: !Ref Env

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  ### PUBLIC SUBNETS ###
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Ref PublicSubnetCidrs]
      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${PubSubName}-1"
        - Key: Env
          Value: !Ref Env

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Ref PublicSubnetCidrs]
      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${PubSubName}-2"
        - Key: Env
          Value: !Ref Env

  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [2, !Ref PublicSubnetCidrs]
      AvailabilityZone: !Select [2, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${PubSubName}-3"
        - Key: Env
          Value: !Ref Env

  ### PUBLIC ROUTE TABLE ###
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PubRtName
        - Key: Env
          Value: !Ref Env

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetCRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      RouteTableId: !Ref PublicRouteTable

  ### NAT ###
  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Ref EipName
        - Key: Env
          Value: !Ref Env

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: AttachIGW
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: !Ref NgwName
        - Key: Env
          Value: !Ref Env

  ### PRIVATE SUBNETS ###
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Ref PrivateSubnetCidrs]
      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${PriSubName}-1"
        - Key: Env
          Value: !Ref Env

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Ref PrivateSubnetCidrs]
      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${PriSubName}-2"
        - Key: Env
          Value: !Ref Env

  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [2, !Ref PrivateSubnetCidrs]
      AvailabilityZone: !Select [2, !Ref AvailabilityZones]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${PriSubName}-3"
        - Key: Env
          Value: !Ref Env

  ### PRIVATE ROUTE TABLE ###
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PriRtName
        - Key: Env
          Value: !Ref Env

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetCRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetC
      RouteTableId: !Ref PrivateRouteTable

  ### SECURITY GROUPS ###
  AlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  Ec2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref AlbSG

  ### ALB ###
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref AlbName
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
        - !Ref PublicSubnetC
      SecurityGroups:
        - !Ref AlbSG

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Ref AlbTargetGroupName
      VpcId: !Ref VPC
      Port: 80
      Protocol: HTTP
      # 🔥 Health Check Configuration
      HealthCheckPath: /
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ### LAUNCH TEMPLATE ###
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Ref LaunchTemplateName
      LaunchTemplateData:
        ImageId: !Ref AmiId
        InstanceType: !Ref InstanceType
        SecurityGroupIds:
          - !Ref Ec2SG
        UserData:
          Fn::Base64: |
            #!/bin/bash
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd
            echo "<h1>Hello from Terraform EC2 $(hostname -f)</h1>" > /var/www/html/index.html

  ### ASG ###
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
        - !Ref PrivateSubnetC
      MinSize: !Ref MinSize
      MaxSize: !Ref MaxSize
      DesiredCapacity: !Ref DesiredCapacity
      TargetGroupARNs:
        - !Ref TargetGroup
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      Tags:
      - Key: Name
        Value: prod-server
        PropagateAtLaunch: true

  ### CloudWatch Log Group ###
  HostedZoneCloudWatchLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: "/aws/route53/webapp"
      RetentionInDays: 1

  ##SNS Topic##
  SNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: Alerts
  
  ###SNS Subscription###
  SNSSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      Protocol: email
      Endpoint: hdxt100@gmail.com
      TopicArn: !Ref SNSTopic

  ##Hosted Zone##
  HostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      Name: example.com  # Replace with your domain
      QueryLoggingConfig:
        # CloudWatchLogsLogGroupArn: !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/route53/example
        # Use !Sub only when: Log group already exists, Created outside CloudFormation, Cross-account constraints exist.
        CloudWatchLogsLogGroupArn: !GetAtt HostedZoneCloudWatchLogGroup.Arn 

  ###Resource Record###
  ResourceRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      # HostedZoneName: example.com.  # Must exactly match the hosted zone name & Must end with a dot (.)
      HostedZoneId: !Ref HostedZone
      Name: web.example.com.  # Replace with your desired subdomain
      Type: CNAME
      TTL: '900'
      ResourceRecords:
        - !GetAtt ALB.DNSName

  ###Log Resource Policy###
  LogResourcePolicy:
      Type: AWS::Logs::ResourcePolicy
      Properties:
        PolicyName: "LogResourcePolicy"
        PolicyDocument: !Sub '{"Version":"2012-10-17","Statement":[{"Action":["logs:CreateLogStream","logs:PutLogEvents"],"Resource":"arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/route53/webapp"}]}'

  ###CloudWatch Alarm###
  CloudWatchAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmActions:
        - !Sub  'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:SNSTopic'
      AlarmDescription: This alarm triggers when CPU utilization exceeds 70% for 5 minutes.
      AlarmName: CPU-Utilization-High-ALARM
      ComparisonOperator: GreaterThanOrEqualToThreshold      
      DatapointsToAlarm: 1
      MetricName: CPUUtilization
      Dimension:
        - Name: AutoScalingGroupName
          Value: !Ref AutoScalingGroup
      EvaluationPeriods: 1
      Namespace: AWS/EC2
      Period: 300
      Statistic: Maximum
      Threshold: 2  # Put 70 if if Trigger alarm if CpuUtilization exceeds 70%
      TreatMissingData: breaching






####################
# OUTPUTS
####################
Outputs:
  VpcId:
    Value: !Ref VPC

  AlbDNS:
    Value: !GetAtt ALB.DNSName

  PublicSubnetIds:
    Value: !Join [",", [!Ref PublicSubnetA, !Ref PublicSubnetB, !Ref PublicSubnetC]]

  PrivateSubnetIds:
    Value: !Join [",", [!Ref PrivateSubnetA, !Ref PrivateSubnetB, !Ref PrivateSubnetC]]
